# Ragna

./: .gitignore  AI_CONTEXT.md  Prototip.txt  README.md
backend/: config.py  database.py  main.py  models.py  requirements.txt
backend/modules/: chunking.py  cleaning.py  embeddings.py  encryption.py  entities.py  entity_topology.py  extraction.py  ingestion.py  ocr.py  reranker.py  search.py  summarizer.py  vector_store.py  watcher.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/lib/: api.ts
