[package]
name = "ragna"
version = "0.2.0"
description = "Ragna — AI Memory Compiler"
authors = ["Franklin System"]
edition = "2021"

[lib]
name = "ragna_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
